fix input for tag search so its visible

--- a/src/Styles/components/_scribbleNotes.scss
+++ b/src/Styles/components/_scribbleNotes.scss
@@ -51,6 +51,10 @@
     height: 2.5vh;
 }
 
+.search-tags {
+    color: black;
+}
+
 // --------------  actual notes component -------------- //
 
 .note-container {
